--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
-    <title>Header</title>
+    <title>Prakhar Todo</title>
 </head>
 <body>
     <header>
